--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,19 @@
 {
 	"env": {
-		"browser": true,
+		"commonjs": true,
 		"es6": true,
 		"node": true
 	},
 	"extends": [
-		"eslint:recommended",
-		"plugin:react/recommended",
-		"plugin:react-hooks/recommended"
+		"eslint:recommended"
 	],
-	"parser": "babel-eslint",
 	"parserOptions": {
-		"ecmaFeatures": {
-			"jsx": true
-		},
 		"ecmaVersion": 2018,
 		"sourceType": "module"
 	},
-	"plugins": [
-		"react",
-		"react-native"
-	],
-	"settings": {
-		"react": {
-			"version": "detect"
-		}
+	"globals": {
+		"Atomics": "readonly",
+		"SharedArrayBuffer": "readonly"
 	},
 	"rules": {
 		"indent": ["off", "tab",{"SwitchCase": 1}],
@@ -32,13 +21,8 @@
 		"linebreak-style": ["off", "unix"],
 		"quotes": ["off", "double"],
 		"semi": ["error", "always"],
-		"react/no-unescaped-entities": ["off"],
-		"react/prop-types": ["error"],
 		"brace-style": ["error", "allman"],
-		"react/self-closing-comp": ["error", {"component": true,"html": true}],
-		"no-console": ["warn", {"allow": ["warn", "error"]}],
 		"no-var": ["error"],
-		"no-empty": ["error", {"allowEmptyCatch": true}],
-		"react-hooks/exhaustive-deps": ["off"]
+		"no-empty": ["error", {"allowEmptyCatch": true}]
 	}
 }
