--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -3,21 +3,30 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "npx react-native run-android",
+    "ios": "npx react-native run-ios",
     "start": "react-native start",
+    "run-ios": "concurrently \"npm start\" \"npm run ios\"",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "mobx": "^6.3.2",
+    "mobx-react-lite": "^3.2.0",
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-native-location": "^2.5.0",
+    "react-native-maps": "^0.28.0",
+    "react-navigation": "^4.4.4",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "concurrently": "^6.2.1",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
