--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -5,18 +5,23 @@
   "scripts": {
     "android": "npx react-native run-android",
     "ios": "npx react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "run-ios": "concurrently \"npm start\" \"npm run ios\"",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-location": "^2.5.0",
     "react-native-maps": "^0.28.0",
+    "react-native-safe-area-context": "^3.3.0",
+    "react-native-screens": "^3.6.0",
     "react-navigation": "^4.4.4",
     "styled-components": "^5.3.0"
   },
